--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "moment": "^2.29.4",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
