--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@reduxjs/toolkit": "^1.9.7",
     "moment": "^2.29.4",
     "next": "13.5.4",
+    "quill": "^1.3.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
